trying to fix sticky on mobile

--- a/src/css/resources.styl
+++ b/src/css/resources.styl
@@ -46,7 +46,6 @@
       display flex
       position sticky
       top 0
-      overflow hidden
       width 100%
       z-index 1
       background-color $primary-color
@@ -58,14 +57,7 @@
         margin-bottom 0
         box-shadow none
         -webkit-box-shadow none
-        padding 15px
-    //   .btn
-    //     margin-left 5px
-    //     margin-right 5px
-    // .filter > :first-child
-    //   margin-left 0
-    // .filter > :last-child
-    //   margin-right 0
+        padding 12px
     .content
       padding-left 0
       .card
